2002-02-25  Jon K Hellan  <hellan@acm.org>

	* ms-excel-read.c (ms_sheet_create_image): New function. Factor
	image creation out of ms_sheet_create_obj and also handle cropping.
	(ms_sheet_create_obj): Call ms_sheet_create_image.

2002-02-23  Jon K Hellan  <hellan@acm.org>

	* plugin.xml.in: Recognize *.xlt extension.

2002-02-21  Morten Welinder  <terra@diku.dk>

	* ms-excel-write.c (init_base_char_width_for_write): Constify.
	(ms_excel_write_workbook): Constify.

	* ms-excel-read.c (get_substitute_font): Constify.
	(ms_excel_get_style_from_xf): Constify.
	(biff_boundsheet_data_new): Constify.

	* ms-summary.c (read_summary_items): Constify.

	* ms-excel-util.c (get_locale_charset_name): Constify.  Remove
	code conditioned on HAVE_ICONV && !HAVE_ICONV.

	* ms-escher.c (ms_escher_read_BSE): Constify.

2002-02-20  Morten Welinder  <terra@diku.dk>

	* ms-excel-write.c (write_value): Fix format.

	* ms-excel-read.c (ms_excel_read_name): Constify.

	* ms-formula-read.c (formula_func_data): Constify.

	* ms-excel-util.c (two_way_table_put): Constify.

2002-02-19  Jon K Hellan  <hellan@acm.org>

	* ms-excel-read.c (ms_excel_palette_get): Update documentation.
	(ms_excel_get_style_from_xf): Remove case 0.
	(biff_xf_data_new): Save difference bits. We don't use them yet,
	though. Documentation is wrong, background color is one bit more
	than documented

	* ms-excel-write.h (struct _ExcelFont): Add is_auto member.
	(PALETTE_BLACK): Change from 0 to 8.
	(PALETTE_WHITE): Change from 1 to 9.
	(PALETTE_AUTO_PATTERN, PALETTE_AUTO_BACK, PALETTE_AUTO_FONT,
	FILL_NONE, FILL_SOLID): Define

	* ms-excel-write.c (write_window2): Write grid / auto pattern
	color.
	(style_color_to_int): Rename to style_color_to_rgb888.
	(palette_put_defaults): Call index 8 'PALETTE_BLACK'. Mark both
	black and white as in use.
	(palette_get_index): Return 8 (PALETTE_BLACK) for black, and 9
	(PALETTE_WHITE) for white.
	(put_color): Call style_color_to_rgb888 with new name.