@@ -1,3 +1,8 @@
+2002-02-26  Morten Welinder  <terra@diku.dk>
+
+	* ms-excel-read.c (biff_get_rk): Improve precision ever so
+	slightly on numbers that are scaled by 0.01.
+
 2002-02-25  Jon K Hellan  <hellan@acm.org>
 
 	* ms-excel-read.c (ms_sheet_create_image): New function. Factor
